# SelectionProofread

./: LICENSE  README.md  pyproject.toml  setup.cfg
selectionproofread/: __init__.py  main.py
