[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selectionproofread"
version = "0.1.0"
description = "Copy selected text, send to AI, replace with result (X11 + Wayland)."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai",
    "pyperclip",
]

[project.scripts]
selectionproofread = "selectionproofread.main:main"

